@@ -2,6 +2,7 @@
 v4.1.3-git
 ----------
 
+[mms] Improved UI when viewing search results from Advanced Search.
 [mms] Remove features from UI when VFS is not available or disabled.
 [mjr] Fix filtering Facebook driver results (Bug #12739).
 [jan] Gracefully deal with columns removed from the backend.
